add changes based on Hristo's comments (secondaryHeader)